# anchor

./: .gitignore  Cargo.toml  README.md
examples/: build_container.rs  get_container_metrics.rs  get_platform.rs  get_resource_status.rs  get_status.rs  is_docker_running.rs  launch_docker.rs  list_containers.rs  list_images.rs  load_manifest.rs  next_lifecycle.rs  pull_image.rs  remove_container.rs  remove_image.rs  save_manifest.rs  start_cluster.rs  start_container.rs  start_server.rs  stop_cluster.rs  stop_container.rs  stop_server.rs
input/: manifest.json
output/: manifest.json
scripts/: nuke_docker.sh
src/: anchor_error.rs  client.rs  cluster.rs  cluster_status.rs  command.rs  configuration.rs  container.rs  container_metrics.rs  container_state.rs  credentials.rs  docker_client.rs  docker_error.rs  format.rs  health_status.rs  launch_docker.rs  lib.rs  manifest.rs  manifest_error.rs  mount_type.rs  resource_status.rs  server.rs  server_status.rs  start_docker_daemon.rs
