[package]
name = "anchor"
version = "0.0.0"
edition = "2024"
authors = ["Freddy Wordingham <freddy@digilab.ai>"]
description = "A Rust library for managing Docker container clusters through declarative JSON manifests"
homepage = "https://github.com/FreddyWordingham/anchor"
repository = "https://github.com/FreddyWordingham/anchor"
documentation = "https://docs.rs/anchor"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["docker", "containers", "cluster", "orchestration", "devops"]
categories = ["development-tools", "api-bindings", "virtualization"]

[dependencies]
bollard = "0.19.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
aws-config = "1.6.3"
aws-sdk-ecr = "1.78.0"
base64 = "0.22.1"
