[package]
name = "anchor"
version = "0.0.0"
edition = "2024"
authors = ["Freddy Wordingham <freddy@digilab.ai>"]
description = "A Rust library for managing Docker container clusters through declarative JSON manifests"
homepage = "https://github.com/FreddyWordingham/anchor"
repository = "https://github.com/FreddyWordingham/anchor"
documentation = "https://docs.rs/anchor"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["docker", "containers", "cluster", "orchestration", "devops"]
categories = ["development-tools", "api-bindings", "virtualization"]

[features]
default = []
aws_ecr = ["aws-config", "aws-sdk-ecr", "base64"]

[dependencies]
aws-config = { version = "1.6.3", optional = true }
aws-sdk-ecr = { version = "1.78.0", optional = true }
base64 = { version = "0.22.1", optional = true }
bollard = "0.19.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
] }


[[example]]
name = "build_container"
required-features = ["aws_ecr"]

[[example]]
name = "get_platform"
required-features = ["aws_ecr"]

[[example]]
name = "is_docker_running"
required-features = ["aws_ecr"]

[[example]]
name = "list_containers"
required-features = ["aws_ecr"]

[[example]]
name = "list_images"
required-features = ["aws_ecr"]

[[example]]
name = "load_manifest"
required-features = ["aws_ecr"]

[[example]]
name = "pull_image"
required-features = ["aws_ecr"]

[[example]]
name = "remove_container"
required-features = ["aws_ecr"]

[[example]]
name = "remove_image"
required-features = ["aws_ecr"]

[[example]]
name = "save_manifest"
required-features = ["aws_ecr"]

[[example]]
name = "start_cluster"
required-features = ["aws_ecr"]

[[example]]
name = "start_container"
required-features = ["aws_ecr"]

[[example]]
name = "stop_cluster"
required-features = ["aws_ecr"]

[[example]]
name = "stop_container"
required-features = ["aws_ecr"]
