[package]
name = "anchor"
version = "0.1.2"
edition = "2024"
authors = ["Freddy Wordingham <freddy@digilab.ai>"]
description = "A Rust library for managing Docker container clusters through declarative JSON manifests"
homepage = "https://github.com/FreddyWordingham/anchor"
repository = "https://github.com/FreddyWordingham/anchor"
documentation = "https://docs.rs/anchor"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["docker", "containers", "cluster", "orchestration", "devops"]
categories = ["development-tools", "api-bindings", "virtualization"]

[features]
default = []
aws_ecr = ["aws-config", "aws-sdk-ecr", "base64"]

[dependencies]
aws-config = { version = "1.6.3", optional = true }
aws-sdk-ecr = { version = "1.78.0", optional = true }
base64 = { version = "0.22.1", optional = true }
bollard = "0.19.0"
chrono = "0.4.41"
futures-util = "0.3.31"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }


[[example]]
name = "get_resource_status"
required-features = ["aws_ecr"]

[[example]]
name = "get_container_metrics"
required-features = ["aws_ecr"]

[[example]]
name = "next_lifecycle"
required-features = ["aws_ecr"]

[[example]]
name = "stop_container"
required-features = ["aws_ecr"]
